Comments and menu fixed with alignment

--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,15 @@ nav{
 }
 
 .brand-logo{
-    margin-left: 25px;
+    margin-left: 15px;
 }
 
 #nav-mobile{
-    margin-right: 25px;
+    margin-right: 15px;
 }
 
 .button-collapse{
-    margin-left: 25px;
+    margin-left: 15px;
 }
 
 .btn, .btn-large{
@@ -28,8 +28,8 @@ nav{
 }
 
 .fixed-action-btn.horizontal{
-    bottom: 25px !important;
-    right: 25px !important;
+    bottom: 15px !important;
+    right: 15px !important;
 }
 
 .btn-floating .btn-large{
